@@ -1,13 +1,13 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyasn1/pyasn1-0.0.9a.ebuild,v 1.2 2010/01/03 21:39:15 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyasn1/pyasn1-0.0.9a.ebuild,v 1.3 2010/01/10 19:03:16 nixnut Exp $
 
 EAPI="2"
 SUPPORT_PYTHON_ABIS="1"
 
 inherit distutils
 
-KEYWORDS="~amd64 ~ia64 ~ppc ~sparc x86"
+KEYWORDS="~amd64 ~ia64 ppc ~sparc x86"
 
 DESCRIPTION="ASN.1 types and codecs (BER, CER, DER) implementation."
 HOMEPAGE="http://pyasn1.sourceforge.net/"
