@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pysnmp
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pysnmp/ChangeLog,v 1.31 2010/01/03 21:40:11 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pysnmp/ChangeLog,v 1.32 2010/01/10 19:03:41 nixnut Exp $
+
+  10 Jan 2010; nixnut <nixnut@gentoo.org> pysnmp-4.1.12a.ebuild:
+  ppc stable #298797
 
   03 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
   pysnmp-4.1.12a.ebuild:
