@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyasn1
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyasn1/ChangeLog,v 1.8 2010/01/03 21:39:15 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyasn1/ChangeLog,v 1.9 2010/01/10 19:03:16 nixnut Exp $
+
+  10 Jan 2010; nixnut <nixnut@gentoo.org> pyasn1-0.0.9a.ebuild:
+  ppc stable #298797
 
   03 Jan 2010; Christian Faulhammer <fauli@gentoo.org> pyasn1-0.0.9a.ebuild:
   stable x86, bug 298797
